# fcitx5

src/modules/spell/dict/: CMakeLists.txt
